# pilot

./: .gitignore  CLAUDE.md  README.md  bashrc.append  claude-repl  claude.md  install.sh  tmux.conf
pilot/: Caddyfile  config.py  context.py  gemini.py  logging_config.py  pilot.service  pyproject.toml  server.py  test_pilot.py  tmux.py
pilot/static/: index.html
